data/derived/fa15/progs/unify/prog2427.ml.out
Characters 153-186:
  ((clone 0 difference1 :: l1), l2);;
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
